API Gen simplification.
